[tool.poetry]
name = "letl"
version = "0.1.0"
description = "Simple ETL framework"
authors = ["Mark Stefanovic"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
SQLAlchemy = "^1.4.14"
pykka = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
